## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = height_map_editor

height_map_editor_SOURCES =  \
	actions.c \
	actions.h \
	cursors.c \
	cursors.h \
	display_terrain.c \
	display_terrain.h \
	draw_stuff.c \
	draw_stuff.h \
	events.c \
	events.h \
	font.c \
	font.h \
	generate_terrain.c \
	generate_terrain.h \
	global.c \
	global.h \
	global_tools.c \
	global_tools.h \
	init.c \
	init.h \
	isometric.c \
	isometric.h \
	load_save.c \
	load_save.h \
	Makefile.am \
	menus.c \
	menus.h \
	objects.c \
	objects.h \
	settings.c \
	settings.h \
	tools.c \
	tools.h \
	main.c

height_map_editor_LDFLAGS = \
	-lm

height_map_editor_LDADD = 
